kubernetes_resources/prometheus_argo.yml
apiVersion: v1
kind: Service
metadata:
  name: spark-svc-argo
  namespace: ${operatornamespace}
  labels:
    app: argo
spec:
  ports:
    - name: metrics-argo
      port: 10254
      targetPort: 10254
      protocol: TCP
  selector:
    deployment.kubernetes.io/name: workflow-controller
