kubernetes_resources/prometheusservicemonitor.yml
apiVersion: v1
kind: Service
metadata:
  name: spark-svc-sparkoperator
  namespace: ${operatornamespace}
  labels:
    app: spark-operator
spec:
  ports:
    - name: metrics-sparkoperator
      port: 10254
      targetPort: 10254
      protocol: TCP
  selector:
    app.kubernetes.io/name: spark-operator
