kubernetes_resources/ingressargo.yml
# consider making argo in the same namespace as spark and cassandra...
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetesingress
  annotations:
    # static IP
    kubernetes.io/ingress.global-static-ip-name: ipaddress-${organization}
spec:
  rules:
  - http:
      paths:
      - path: /build/*
        backend:
          serviceName: argoeventsservice
          servicePort: 80
      #- path: /cassandra/* # shouldn't be needed, I dont think...
      #  backend:
      #    serviceName: cassandraservice
      #    servicePort: 9042
